--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,36 @@
-* {
-    border: solid green;
+body {
+    font-family: 'Inter', sans-serif;
     margin: 0;
     padding: 0;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#title {
+    margin-top: 50px;
+    font-weight: 500;
+}
+
+#btn {
+    border: none;
+    padding: 0.7em 1.7em;
+    font-family: inherit;
+    font-size: 18px;
+    border-radius: 7px;
+    background-color: aquamarine;
+    box-shadow: 5px 5px 5px #c5c5c5, -2px -2px 2px #ffffff;
+}
+#btn:hover {
+    box-shadow: 7px 7px 5px #c5c5c5, -2px -2px 2px #ffffff;
+}
+#btn:active {
+    box-shadow: inset 5px 5px 5px #c5c5c5, inset -2px -2px 2px #ffffff;
+}
+
+#answer {
+    font-weight: 400;
+}
