--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 }
 
 #formContainer {
-  margin-bottom: 30px;
+  margin: 0 auto 30px auto;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -51,7 +51,7 @@ body {
   min-height: 410px;
   display: flex;
   flex-direction: column;
-  margin: 0 15px;
+  margin: 0 auto;
   padding: 15px 15px;
   border: solid 1px #c5c5c5;
   border-radius: 5px;
